.k8s/ingress/example-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-root: /
spec:
  rules:
  - host: sampleapp.info
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-app-service
          servicePort: 80
  tls: # < placing a host in the TLS config will indicate a cert should be created
  - hosts:
    - sampleapp.info
    secretName: sample-app-secret
